# pycellin

./: .gitignore  LICENSE  README.md  XML_reader.py  XML_writer.py  graph2xml.py  pyproject.toml  pytmn.py  pytmn_reader.py  pytmn_writer.py  requirements.txt  setup.py  test_XML_reader.py  test_pytmn.py  test_xml_utils.py  xml_utils.py
.github/: dependabot.yml
.github/workflows/: build.yml  deploy.yml  test.yml
notebooks/: Advanced - Custom features.ipynb  CellTracks_GJ.ipynb  Creating a model from scratch.ipynb  Custom features.ipynb  Custom properties.ipynb  Getting started.ipynb  Getting_started.ipynb  Managing features.ipynb  Managing properties.ipynb  Plotting lineage feature values.ipynb  Pycellin data structure.ipynb  Pycellin with TrackMate.ipynb  Working with TrackMate data.ipynb  geffception.ipynb  old and to dispatch.ipynb  tutorial.ipynb
notebooks/imgs/: Celegans-5pc-17timepoints.xml
pycellin/: __init__.py  custom_types.py  testing_things.ipynb  utils.py
pycellin/classes/: __init__.py  data.py  exceptions.py  feature.py  feature_calculator.py  lineage.py  metadata.py  model.py  model_metadata.py  property.py  property_calculator.py  props_metadata.py  updater.py
pycellin/graph/: __init__.py  features.py  io.py  lineage.py  morphology.py
pycellin/graph/features/: __init__.py  morphology.py  motion.py  tracking.py  utils.py
pycellin/graph/properties/: __init__.py  core.py  morphology.py  motion.py  topology.py  tracking.py  utils.py
pycellin/io/: __init__.py  trackmate.py  utils.py
pycellin/io/cell_tracking_challenge/: __init__.py  exporter.py  loader.py
pycellin/io/epicure/: exporter.py  loader.py
pycellin/io/geff/: __init__.py  exporter.py  loader.py
pycellin/io/trackmate/: __init__.py  exporter.py  loader.py
pycellin/io/trackpy/: __init__.py  (+2 more)
pycellin/tests/: test_xml_utils.py
pycellin/tmio/: __init__.py  graph2xml.py  xml2graph.py  xml_utils.py
pycellin/trackmate_io/: graph2xml.py  xml2graph.py
sample_data/: Celegans-5pc-17timepoints.xml  Ecoli_growth_on_agar_pad.xml  Ecoli_growth_on_agar_pad_TMtoCTC.txt  Ecoli_growth_on_agar_pad_with_fusions.xml  Ecoli_growth_on_agar_pad_with_gaps.xml  FakeTracks.pickle  FakeTracks.tif  FakeTracks.xml  FakeTracks_TMtoCTC.txt  FakeTracks_exported_TM.xml  FakeTracks_trackpy.pkl
sample_data/Ecoli_growth_on_agar_pad.geff/: .zattrs
sample_data/results/: Ecoli_growth_on_agar_pad_CTC_export.txt  Ecoli_growth_on_agar_pad_TrackMate_export.xml  Ecoli_growth_on_agar_pad_cell_df.csv  Ecoli_growth_on_agar_pad_cycle_df.csv  Ecoli_growth_on_agar_pad_lin_df.csv  Ecoli_growth_on_agar_pad_link_df.csv  FakeTracks_TMtoTM.xml  FakeTracks_TrackMate_export.xml  FakeTracks_exported_CTC_from_CTC.txt  FakeTracks_exported_TM.xml  FakeTracks_saved.pickle
samples/: FakeTracks.xml  FakeTracks_written.xml
tests/: test_custom_types.py  test_xml_utils.py
tests/classes/: test_data.py  test_feature.py  test_lineage.py  test_model.py  test_property.py
tests/io/: test_utils.py
(+125 files in other folders)
